# nasdaq100_elt

./: .dockerignore  .gitignore  Dockerfile  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: branch_deployments.yml  deploy.yml
dashboard/: dashboard.qmd
orchestration/: __init__.py  project.py
orchestration/assets/: dbt.py  ingestion.py
orchestration/jobs/: __init__.py
orchestration/sensors/: __init__.py
transformation/: .sqlfluff  dbt_project.yml  profiles.yml
transformation/macros/: calculate_session_returns.sql
transformation/models/: sources.yml
transformation/models/marts/: monthly_bullish_stats.sql  monthly_performance.sql  weekly_performance.sql  yearly_performance.sql
transformation/models/staging/: stg_daily_ohlc.sql
