[project]
name = "nasdaq100_elt"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
    "bs4>=0.0.2",
    "dagster-dbt>=0.25.1",
    "dagster-duckdb>=0.25.1",
    "dagster>=1.9.1",
    "dbt-duckdb>=1.9.0",
    "pandas>=2.2.3",
    "yfinance>=0.2.48",
]

[dependency-groups]
dev = [
    "dagster-webserver>=1.9.1",
    "ipykernel>=6.29.5",
]
dashboard = [
    "itables>=2.2.3",
    "matplotlib>=3.9.2",
    "nbclient>=0.10.0",
    "nbformat>=5.10.4",
    "plotly>=5.24.1",
]

[tool.dagster]
module_name = "orchestration"
